# rust

cargo-demo1/: Cargo.toml
cargo-demo1/adder/src/: lib.rs
cargo-demo1/closure/src/: main.rs
cargo-demo1/dev-build/: Cargo.toml
cargo-demo1/dev-build/src/: main.rs
cargo-demo1/grep/: poem.txt
cargo-demo1/grep/src/: lib.rs  main.rs
cargo-demo1/src/: Demo.rs  main.rs
src/: Demo2.rs  DemoFMT.rs
