[package]
name = "jitu-build"
version = "0.1.0"
authors=["jitu"]
edition = "2021"
license="MIT"
description="A Demo library for Test"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[profile.dev]
opt-level = 0

[profile.release]
opt-level=3
